--- a/tqs_project/src/main/resources/templates/index.html
+++ b/tqs_project/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,13 +22,6 @@
                 </svg>
               </button>
             </div>
-          </div>
-          <div class="suggestion-wrap">
-            <span>New Arrivals</span>
-            <span>Ladies</span>
-            <span>Mens</span>
-            <span>Accessories</span>
-            <span>Sale</span>
           </div>
         </fieldset>
       </form>
