--- a/tqs_project/src/main/resources/templates/index2.html
+++ b/tqs_project/src/main/resources/templates/index2.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
     <h1>Home</h1>
+    <form th:action="@{/info}">
+        <!--/*@thymesVar id="city" type="java.lang.String"*/-->
+        <input type="text" th:value="${city}" name="city"/>
+        <input type="submit" />
+    </form>
 </body>
 </html>
