--- a/tqs_project/src/main/resources/templates/data.html
+++ b/tqs_project/src/main/resources/templates/data.html
@@ -10,42 +10,104 @@
             margin-bottom:auto;
             text-align:center;
             padding-top: 1%;
+            padding-bottom: 10%;
         }
 
         .content {
-            margin-top:auto;
-            margin-bottom:auto;
-            text-align:center;
-            padding-top: 10%;
+            text-align: center;
+            position: absolute;
+            width: 300px;
+            height: auto;
+            z-index: 15;
+            top: 30%;
+            left: 50%;
+            margin: -100px 0 0 -150px;
+            background: rgba(225, 225, 225, .8);
         }
 
         .align {
             display: inline-block;
+            font-size: 20px;
+        }
+
+        body {
+            background: url("../static/images/data_background.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        align-header {
+            display: inline-block;
+            font-size: 25px;
         }
 
     </style>
 </head>
 <body>
     <div class="title">
-        <h1>Data</h1>
+        <p class="align">Data for: </p>
+        <p class="align" th:text="${city}"></p>
     </div>
     <div class="content">
         <div>
             <p class="align">Air Quality Index: </p>
             <p class="align" th:text="${airquality.aqIndex}"></p>
         </div>
+        <div>
+            <p class="align" >CO: </p>
+            <p class="align" th:text="${airquality.co}"></p>
+        </div>
+        <div>
+            <p class="align" >O3: </p>
+            <p class="align" th:text="${airquality.o3}"></p>
+        </div>
+        <div>
+            <p class="align" >SO2: </p>
+            <p class="align" th:text="${airquality.so2}"></p>
+        </div>
+        <div>
+            <p class="align" >NO2: </p>
+            <p class="align" th:text="${airquality.no2}"></p>
+        </div>
+        <div>
+            <p class="align" >PM10: </p>
+            <p class="align" th:text="${airquality.pm10}"></p>
+        </div>
+        <div>
+            <p class="align" >PM25: </p>
+            <p class="align" th:text="${airquality.pm25}"></p>
+        </div>
+        <div>
+            <p class="align" >Predominant Pollen Type: </p>
+            <p class="align" th:text="${airquality.predominantPollenType}"></p>
+        </div>
+        <div>
+            <p class="align" >Tree Pollen Level: </p>
+            <p class="align" th:text="${airquality.pollenLevelTree}"></p>
+        </div>
+        <div>
+            <p class="align" >Weed Pollen Level: </p>
+            <p class="align" th:text="${airquality.pollenLevelWeed}"></p>
+        </div>
+        <div>
+            <p class="align" >Grass Pollen Level: </p>
+            <p class="align" th:text="${airquality.pollenLevelGrass}"></p>
+        </div>
+        <div>
+            <p class="align" >Mold Pollen Level: </p>
+            <p class="align" th:text="${airquality.pollenLevelMold}"></p>
+        </div>
 
-        <p th:text="${airquality.co}"></p>
-        <p th:text="${airquality.o3}"></p>
-        <p th:text="${airquality.so2}"></p>
-        <p th:text="${airquality.no2}"></p>
-        <p th:text="${airquality.pm10}"></p>
-        <p th:text="${airquality.pm25}"></p>
-        <p th:text="${airquality.predominantPollenType}"></p>
-        <p th:text="${airquality.pollenLevelTree}"></p>
-        <p th:text="${airquality.pollenLevelWeed}"></p>
-        <p th:text="${airquality.pollenLevelGrass}"></p>
-        <p th:text="${airquality.pollenLevelMold}"></p>
+
+
+
+
+
+
+
+
+
+
     </div>
 
 </body>
