Added a selenium/test-automated test class and the chrome driver

--- a/tqs_project/src/main/resources/templates/data.html
+++ b/tqs_project/src/main/resources/templates/data.html
@@ -60,7 +60,7 @@
     </div>
     <div class="title">
         <p class="align-header">Data for: </p>
-        <p class="align-header" th:text="${city}"></p>
+        <p id="cityName" class="align-header" th:text="${city}"></p>
     </div>
     <div class="content">
         <div>
