Made a new html page to show air quality by coordinates, added a new search bar in the index html page, made a new html error page (error 400) and even made some validations for the search bar used to search by coordenates; finally, I made a validation where I check if the result of the fields from a jsonarray are null or not

--- a/tqs_project/src/main/resources/static/css/main.css
+++ b/tqs_project/src/main/resources/static/css/main.css
@@ -14,6 +14,9 @@ html {
  */
 body {
   margin: 0;
+  background: url("../images/background2.png");
+  background-size: cover;
+  background-position: center center;
 }
 
 /**
@@ -496,7 +499,6 @@ legend {
 }
 
 .choices[data-type*="select-one"] .choices__button {
-  background-image: url("../../icons/cross-inverse.svg");
   padding: 0;
   background-size: 8px;
   height: 100%;
@@ -819,9 +821,6 @@ legend {
   -ms-flex-align: center;
       align-items: center;
   font-family: 'Poppins', sans-serif;
-  background: url("../images/background2.png");
-  background-size: cover;
-  background-position: center center;
   padding: 15px;
 }
 
@@ -970,3 +969,8 @@ legend {
   margin-right: 10px;
   margin-bottom: 10px;
 }
+
+.black{
+  color: black !important;
+}
+
