--- a/tqs_project/src/main/resources/templates/index.html
+++ b/tqs_project/src/main/resources/templates/index.html
@@ -10,42 +10,47 @@
   </head>
   <body>
     <div class="s004">
-      <form action="#" th:action="@{/info}">
-        <fieldset>
-          <div class="inner-form">
-            <div class="input-field">
-              <!--/*@thymesVar id="city" type="java.lang.String"*/-->
-              <input class="form-control" id="choices-text-preset-values" th:value="${city}" name="city" placeholder="Search by cityname..."/>
-              <button class="btn-search" type="submit">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                  <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                </svg>
-              </button>
+      <div class="firstForm">
+        <form action="#" th:action="@{/info}">
+          <fieldset>
+            <div class="inner-form">
+              <div class="input-field">
+                <!--/*@thymesVar id="city" type="java.lang.String"*/-->
+                <input class="form-control" id="choices-text-preset-values" th:value="${city}" name="city" placeholder="Search by cityname..."/>
+                <button class="btn-search" type="submit">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                  </svg>
+                </button>
+              </div>
+              <br/>
+              <br/>
+              <legend>WHAT ARE YOU LOOKING FOR?</legend>
             </div>
-            <br/>
-            <br/>
-            <legend>WHAT ARE YOU LOOKING FOR?</legend>
-          </div>
-        </fieldset>
-      </form>
-      <form action="#" th:action="@{/infoByCoords}">
-        <fieldset>
-          <div class="inner-form">
-            <div class="input-field">
-              <!--/*@thymesVar id="coordinates" type="java.lang.String"*/-->
-              <input class="form-control coordinatesInput" id="choices-text-preset-values" th:value="${coordinates}" name="coordinates" placeholder="Search by coords..."/>
-              <button class="btn-search" type="submit">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                  <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                </svg>
-              </button>
+          </fieldset>
+        </form>
+      </div>
+      <div style="width: 2vw"></div>
+      <div class="secondForm">
+        <form action="#" th:action="@{/infoByCoords}">
+          <fieldset>
+            <div class="inner-form">
+              <div class="input-field">
+                <!--/*@thymesVar id="coordinates" type="java.lang.String"*/-->
+                <input class="form-control" id="choices-text-preset-values" th:value="${coordinates}" name="coordinates" placeholder="Search by coords..."/>
+                <button class="btn-search" type="submit">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                  </svg>
+                </button>
+              </div>
+              <br/>
+              <br/>
+              <legend class="black">WHAT ARE YOU LOOKING FOR?</legend>
             </div>
-            <br/>
-            <br/>
-            <legend class="black">WHAT ARE YOU LOOKING FOR?</legend>
-          </div>
-        </fieldset>
-      </form>
+          </fieldset>
+        </form>
+      </div>
     </div>
     <script th:src="@{../static/js/extention/choices.js}"></script>
     <script>
